--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
        ports:
        - 9090:80/tcp
        
+    appservers:
+       image: tomcat
+       ports:
+       - 8085:8080/tcp   
+      
     database:
        image: redis
        ports:
